--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -147,6 +147,7 @@ nav button {
   font-family: "Poppins";
   cursor: pointer;
   font-size: 1rem;
+  margin-left: 10px;
 }
 /* Auth Form */
 form.signup, form.login {
